# claude-courses

./: .gitignore  .rumdl.toml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: mega-linter.yml
claude-certified-architect-foundations/building-with-the-claude-api/: 001_chunking.ipynb  001_prompt_evals.ipynb  001_prompt_evals_complete.ipynb  001_prompt_evals_fns.ipynb  001_prompt_evals_grader.ipynb  001_prompting.ipynb  001_requests.ipynb  001_tools-2.ipynb  001_tools.ipynb  002_prompting_completed.ipynb  002_system_prompt.ipynb  003_exercise.ipynb  003_temperature.ipynb  003_tool_streaming.ipynb  004_Controlling_output.ipynb  004_streaming.ipynb  005_text_editor_tool.ipynb  006_web_search.ipynb  README.md
